--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/slider": "4.4.2",
     "expo": "~48.0.9",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
